# kth-scalable-sbert

./: .gitignore  README.md  index.py  pyproject.toml  semantic_search.py
sbert/: __init__.py  data.py  model.py
