[tool.poetry]
name = "kth-scalable-sbert"
version = "0.1.0"
description = ""
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
streamlit = "^1.2.0"
transformers = "^4.12.5"
numpy = "^1.21.4"
torch = "^1.10.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
